--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the Visualization Unit for PTSD Explorer. It is also referred to as PTSD Clinvis.
+This is the DVU for displaying diabetes patient data on a mobile device
